--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet" />
+    <link href="../style.css" rel="stylesheet" />
     
     <title>Start</title>
 </head>
@@ -16,7 +16,7 @@
             <div class="bg-text">
                 <h1>You wake up in a frozen forrest</h1>
                 <p>The mist is heavy but you can see a tiny shed ahead. </p>
-                <a href="/walk-shed/walk-shed.html">Go to shed</a>
+                <a href="../walk-shed/walk-shed.html">Go to shed</a>
             </div>
 
         </div>
@@ -24,4 +24,3 @@
 
 </body>
 </html>
-<script src="main.js" type="text/javascript"></script>
