--- a/shed/shed.html
+++ b/shed/shed.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../shed/shed.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="shed/shed.css" rel="stylesheet" />
+   
     <title>shed</title>
 </head>
 <body>
@@ -44,9 +44,8 @@
     </div>
     
         <div class="last">
-            <a href="../death/death.html">Open your eyes</a>
+            <a href="death/death.html">Open your eyes</a>
         </div>
     
 </body>
 </html>
-<script src="../shed/shed.js" type="text/javascript"></script>
