--- a/death/death.html
+++ b/death/death.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../death.css" rel="stylesheet" />
+    <link href="death.css" rel="stylesheet" />
     
     <title>Death</title>
 </head>
@@ -15,7 +15,7 @@
         <div class="bg-image" style="height: 100%;">
             <div class="bg-text">
 
-                <a href="../index.html">Wake Up</a>
+                <a href="index.html">Wake Up</a>
             </div>
 
         </div>
