--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="bg-text">
                 <h1>You wake up in a frozen forrest</h1>
                 <p>The mist is heavy but you can see a tiny shed ahead. </p>
-                <a href="walk-shed/walk-shed.html">Go to shed</a>
+                <a href="/walk-shed/walk-shed.html">Go to shed</a>
             </div>
 
         </div>
