--- a/death/death.html
+++ b/death/death.html
@@ -15,7 +15,7 @@
         <div class="bg-image" style="height: 100%;">
             <div class="bg-text">
 
-                <a href="index.html">Wake Up</a>
+                <a href="../index.html">Wake Up</a>
             </div>
 
         </div>
