--- a/walk-shed/walk-shed.html
+++ b/walk-shed/walk-shed.html
@@ -18,7 +18,7 @@
                 <h2>*DO NOT ENTER*</h2>
                 <p>You hear a loud noise  </p>
                 <a href="../shed/shed.html">Enter shed</a>
-                <a href="././death/death.html">Run back</a>
+                <a href="../death/death.html">Run back</a>
             </div>
 
         </div>
