--- a/shed/shed.html
+++ b/shed/shed.html
@@ -44,7 +44,7 @@
     </div>
     
         <div class="last">
-            <a href="death/death.html">Open your eyes</a>
+            <a href="../death/death.html">Open your eyes</a>
         </div>
     
 </body>
